[package]
name = "place-snapshot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
csv = "1.1"
chrono = "0.4.19"
image = "0.24.1"
arrayvec = "0.7.2"
serde = "1.0.136"
smallvec = "1.8.0"
