[package]
name = "place-snapshot"
version = "0.1.0"
edition = "2021"

[profile.release]
debug=2

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = { version = "1.0", features = ["zlib-ng-compat"], default-features = false }
clap =  { version = "3.1.8", features = ["derive"] }
csv = "1.1"
chrono = "0.4.19"
image = "0.24.1"
arrayvec = "0.7.2"
serde = "1.0.136"
smallvec = "1.8.0"
indicatif = "0.16.2"
